--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -5,6 +5,9 @@
     "browser": true,
     "jquery": true
   },
+  "globals": {
+    "firebase": true
+  },
   "rules": {
     "arrow-spacing": [
       "error",
@@ -145,5 +148,6 @@
       "error",
       "never"
     ]
+
   }
 }
